# swd3-2024-test

./: README.md  pyproject.toml
src/swd3_2024_test/: source.py
